--- a/css/styles.css
+++ b/css/styles.css
@@ -107,14 +107,22 @@ body {
 
 /* główny tytuł strony hero ================================================== */
 
-.hero {
+.hero-container {
 	background-color: var(--hero-banner-container);
+	padding-top: 200px;
+	padding-bottom: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.hero {
+	text-align: center;
+	width: 700px;
 }
 .hero-title {
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.37;
-	text-align: center;
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--white);
@@ -123,9 +131,6 @@ body {
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
-	display: flex;
-	align-items: center;
-	text-align: center;
 	letter-spacing: 0.06em;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
@@ -134,13 +139,21 @@ body {
 	background-color: var(--light-blue);
 	cursor: pointer;
 	margin: 0 auto;
-	padding: 10px 41px 10px 41px;
+	padding: 10px 41px;
+	margin-top: 30px;
 }
-
 /* nasze atuty================================================================== */
+.features {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
 
 .features > ul {
 	list-style-type: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 30px;
 }
 
 .features-title {
@@ -149,6 +162,7 @@ body {
 	line-height: 1.15;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
+	margin-bottom: 10px;
 }
 .features-text {
 	font-size: 14px;
@@ -157,9 +171,14 @@ body {
 	color: var(--grey);
 }
 /* about us, czym się zajmujemy, same zdjęcia + tytuł ============================= */
-
+.about {
+	padding-bottom: 94px;
+}
 .about > ul {
 	list-style-type: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 .about-title {
 	font-weight: 700;
@@ -167,18 +186,27 @@ body {
 	line-height: 1.17;
 	text-align: center;
 	letter-spacing: 0.03em;
+	margin-bottom: 50px;
+}
+.about-item {
+	margin-right: 30px;
+}
+.about-item:last-child {
+	margin-right: 0;
 }
 
 /* our team ========================================================================= */
 
 .team {
 	background-color: var(--team);
+	padding-top: 94px;
+	padding-bottom: 94px;
 }
 .team > ul {
 	list-style-type: none;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 }
 .team-title {
 	font-weight: 700;
@@ -186,6 +214,7 @@ body {
 	line-height: 1.17;
 	text-align: center;
 	letter-spacing: 0.03em;
+	margin-bottom: 50px;
 }
 .team-list-name {
 	font-weight: 500;
@@ -207,6 +236,12 @@ body {
 		0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
 	text-align: center;
+}
+.team-item {
+	margin-right: 30px;
+}
+.team-item:last-child {
+	margin-right: 0;
 }
 
 /*portfolio ===================================================================== */
