--- a/css/styles.css
+++ b/css/styles.css
@@ -17,32 +17,65 @@
 	--team: #f5f4fa;
 	--portfolio-button: #f5f4fa;
 }
-
 body {
 	color: var(--black);
 	background-color: var(--white);
 	font-family: "Roboto", sens-serif;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	magrin: 0;
+}
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+address {
+	font-style: normal;
+}
+button {
+	display: block;
+	cursor: pointer;
+	border: none;
+	border-radius: 4px;
+}
+.list {
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
+}
+.link {
+	text-decoration: none;
+}
 .container {
-	width: 100%;
-	max-width: 1200px;
-	margin: auto;
+	width: 1200px;
+	margin: 0 auto;
 	padding: 0 15px;
 }
 .section {
 	padding-top: 94px;
 	padding-bottom: 94px;
 }
-ul {
-	list-style: none;
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
 }
-a {
-	text-decoration: none;
-}
-.hidden {
-	display: none;
-}
+
 /* główna nawigacja na stronie logo + podstrony + kontakty ===================================== */
 
 .header-line {
@@ -51,11 +84,9 @@ a {
 .menu-container {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	padding-top: 24px;
 	padding-bottom: 24px;
 }
-
 .menu-logo {
 	font-family: "Raleway";
 	font-style: normal;
@@ -71,8 +102,8 @@ a {
 }
 .menu-nav {
 	display: flex;
+	margin-right: auto;
 }
-
 .menu-nav-list {
 	display: flex;
 	align-items: center;
@@ -85,9 +116,7 @@ a {
 .menu-nav-item:last-child {
 	margin-right: 0;
 }
-
 .menu-contact-item {
-	display: inline;
 	margin-right: 50px;
 }
 .menu-contact-item:last-child {
@@ -107,7 +136,6 @@ a {
 	letter-spacing: 0.02em;
 	color: var(--grey);
 }
-
 .menu-nav-link:hover,
 .menu-nav-link:focus,
 .menu-contact-link:hover,
@@ -121,13 +149,6 @@ a {
 	background-color: var(--hero-banner-container);
 	padding-top: 200px;
 	padding-bottom: 200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.hero {
-	text-align: center;
-	width: 700px;
 }
 .hero-title {
 	font-weight: 900;
@@ -136,6 +157,9 @@ a {
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--white);
+	max-width: 696px;
+	text-align: center;
+	margin: 0 auto;
 }
 .hero-button {
 	font-weight: 700;
@@ -143,23 +167,19 @@ a {
 	line-height: 1.88;
 	letter-spacing: 0.06em;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-	border-radius: 4px;
-	border-color: var(--light-blue);
 	color: var(--white);
 	background-color: var(--light-blue);
-	cursor: pointer;
 	margin: 0 auto;
 	padding: 10px 41px;
 	margin-top: 30px;
 }
+
 /* nasze atuty================================================================== */
 .features {
 	padding-bottom: 0;
 }
 .features-list {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
 }
 .features-item {
 	margin-right: 30px;
@@ -167,7 +187,6 @@ a {
 .features-item:last-child {
 	margin-right: 0;
 }
-
 .features-title {
 	font-weight: 700;
 	font-size: 14px;
@@ -182,13 +201,11 @@ a {
 	letter-spacing: 0.03em;
 	color: var(--grey);
 }
+
 /* about us, czym się zajmujemy, same zdjęcia + tytuł ============================= */
 
 .about > ul {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
 }
 .about-title {
 	font-weight: 700;
@@ -235,7 +252,7 @@ a {
 	line-height: 1.19;
 	letter-spacing: 0.03em;
 	color: var(--grey);
-	padding-top: 10px;
+	margin-top: 10px;
 }
 .team-list figure {
 	width: 270px;
@@ -262,9 +279,9 @@ a {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	margin-bottom: 50px;
 }
 .button-item {
-	margin-bottom: 16px;
 	margin-right: 8px;
 }
 .button-item:last-child {
@@ -279,8 +296,6 @@ a {
 	letter-spacing: 0.03em;
 	background-color: var(--portfolio-button);
 	border-style: hidden;
-	border-radius: 4px;
-	cursor: pointer;
 	margin: 0 auto;
 	padding: 6px 22px;
 }
@@ -296,6 +311,8 @@ a {
 	font-size: 18px;
 	line-height: 2;
 	letter-spacing: 0.06em;
+	color: var(--black);
+	margin-bottom: 4px;
 }
 .portfolio-img-text {
 	font-size: 16px;
@@ -303,15 +320,9 @@ a {
 	letter-spacing: 0.03em;
 	color: var(--grey);
 }
-.portfolio-img-containers figure {
-	width: 370px;
-	background: var(--white);
-}
 .portfolio-img-containers {
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
-	padding-top: 34px;
 }
 .figcaption-item {
 	padding: 20px 24px;
@@ -323,11 +334,11 @@ a {
 	margin-bottom: 30px;
 	margin-right: 30px;
 }
+.portfolio-img-item:nth-last-child(-n + 3) {
+	margin-bottom: 0;
+}
 .portfolio-img-item:nth-of-type(3n) {
 	margin-right: 0;
-}
-.img-item {
-	display: block;
 }
 
 /*footer ========================================================================= */
@@ -349,8 +360,8 @@ footer {
 .footer-logo-title {
 	color: var(--white);
 }
-.footer-adress-list > ul {
-	padding-top: 20px;
+.footer-adress-list {
+	margin-top: 20px;
 }
 .footer-adress,
 .footer-contact {
@@ -361,7 +372,10 @@ footer {
 	letter-spacing: 0.03em;
 }
 .footer-item {
-	padding-top: 9px;
+	margin-top: 9px;
+}
+.footer-item:first-child {
+	margin-top: 0px;
 }
 .footer-contact {
 	color: rgba(255, 255, 255, 0.6);
